[package]
name = "sandbox-bitonic-sorter"
version = "0.1.0"
authors = ["Ryuichi Maeno <ryuone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
rand = "0.8.3"
rand_pcg = "0.3.0"
rayon = "1.5.1"

[dev-dependencies]
cli_test_dir = "0.1.7"
regex = "1.5.4"
